log
Thu Apr 21 11:32:57 HSP 2022: 
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4a57427
Thu Apr 21 11:33:10 HSP 2022: 
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b61261a
Thu Apr 21 11:38:50 HSP 2022: 
 tests:  1|8
total_score: 0/70
4861d4a
Thu Apr 21 11:39:40 HSP 2022: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  8|7
total_score: 10/70
d3a2683
Thu Apr 21 15:53:35 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function 'createTreeMap':
treemap.c:40:14: error: unused variable 'aux' [-Werror=unused-variable]
   40 |     TreeMap *aux=(TreeMap*) malloc(sizeof(TreeNode));
      |              ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
0ced6b3
Fri Apr 22 02:45:20 HSP 2022: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
2c3f94d
